<resources>
    <string name="my2c2pSDK_empty_version">Version is required</string>
    <string name="my2c2pSDK_invalid_version">Invalid Version number</string>
    <string name="my2c2pSDK_empty_merchantID">Merchant ID is required</string>
    <string name="my2c2pSDK_empty_uniqueTransactionCode">Unique transaction code is required</string>
    <string name="my2c2pSDK_empty_description">Description is required</string>
    <string name="my2c2pSDK_invalid_description">Description cannot contain the following special characters: !@#$%^&amp;*()&lt;&gt;</string>
    <string name="my2c2pSDK_empty_amount">Amount is required</string>
    <string name="my2c2pSDK_invalid_amount">Amount cannot be less than 0</string>
    <string name="my2c2pSDK_empty_currencyCode">Currency Code is required</string>
    <string name="my2c2pSDK_empty_pan">PAN is required</string>
    <string name="my2c2pSDK_empty_expiryMonth">Expiry month is required</string>
    <string name="my2c2pSDK_empty_expiryYear">Expiry year is required</string>
    <string name="my2c2pSDK_invalid_expiryMonth">Invalid expiry month</string>
    <string name="my2c2pSDK_invalid_expiryYear">Invalid expiry year</string>
    <string name="my2c2pSDK_invalid_expiryDate">Invalid expiry date</string>
    <string name="my2c2pSDK_empty_securityCode">Security code is required</string>
    <string name="my2c2pSDK_invalid_securityCode">Security code must be in numeric format</string>
    <string name="my2c2pSDK_empty_panBank">PAN bank is required</string>
    <string name="my2c2pSDK_empty_panCountry">PAN country is required</string>
    <string name="my2c2pSDK_empty_cardHolderName">Card holder name is required</string>
    <string name="my2c2pSDK_empty_cardHolderEmail">Card holder email is required</string>
    <string name="my2c2pSDK_invalid_cardHolderEmail">Invalid card holder email</string>
    <string name="my2c2pSDK_empty_installmentPeriod">Installment period is required</string>
    <string name="my2c2pSDK_empty_interestType">Interest type is required</string>
    <string name="my2c2pSDK_invalid_interestType">Invalid value of interest type</string>
    <string name="my2c2pSDK_empty_invoicePrefix">Invoice prefix is required</string>
    <string name="my2c2pSDK_empty_recurringAmount">Recurring amount is required</string>
    <string name="my2c2pSDK_invalid_recurringAmount">Recurring amount cannot be less than 0</string>
    <string name="my2c2pSDK_empty_maxAccumulateAmount">Max accumulate amount is required</string>
    <string name="my2c2pSDK_invalid_maxAccumulateAmount">Max accumulate amount cannot be less than 0</string>
    <string name="my2c2pSDK_empty_recurringInterval">Recurring interval is required</string>
    <string name="my2c2pSDK_invalid_recurringInterval">Invalid recurring interval. Max value is 365</string>
    <string name="my2c2pSDK_empty_recurringCount">Recurring count is required</string>
    <string name="my2c2pSDK_empty_chargeNextDate">Charge next date is required</string>
    <string name="my2c2pSDK_empty_secretKey">Secret key is required</string>
    <string name="my2c2pSDK_invalid_length_pan">Invalid PAN length</string>
    <string name="my2c2pSDK_invalid_pan">Invalid PAN</string>
    <string name="my2c2pSDK_invalid_request3DS">request3DS is only allow Y or N or F</string>
    <string name="my2c2pSDK_invalid_length_securityCode">Invalid security code length</string>
    <string name="my2c2pSDK_invalid_recurring_version80">Invalid version. Please change to version 8.0 and above in order to support Recurring transaction</string>
    <string name="my2c2pSDK_invalid_version82">Invalid version. Please change to version 8.2 and above in order to support IPP transaction</string>
    <string name="my2c2pSDK_invalid_stored_version80">Invalid version. Please change to version 8.0 and above in order to support stored card payment</string>
    <string name="my2c2pSDK_invalid_non_stored_version80">Invalid version. Please change to version 8.0 and above in order to support non-stored card payment</string>
    <string name="my2c2pSDK_invalid_version84">Invalid version. Please change to version 8.4 and above in order to support Payment Channel</string>
    <string name="my2c2pSDK_invalid_prod_mpu_version83">Production MPU not supported by Android OS 4.3 and below due to HTTP TLS issue.</string>
    <string name="my2c2pSDK_invalid_statement_descriptor_length">Statement Descriptor length cannot be more than 20</string>
    <string name="my2c2pSDK_invalid_statement_descriptor_special">Statement Descriptor only support alphanumeric</string>
    <string name="my2c2pSDK_invalid_123_version90">Invalid version. Please change to version 9.0 and above in order to support 123 Payment</string>
    <string name="my2c2pSDK_invalid_master_pass_version90">Invalid version. Please change to version 9.0 and above in order to support Master Pass Payment</string>
    <string name="my2c2pSDK_invalid_unique_transaction_code_length_12">Unique transaction code length cannot be more than 12</string>
    <string name="my2c2pSDK_invalid_unique_transaction_code_length_20">Unique transaction code length cannot be more than 20</string>
    <string name="my2c2pSDK_invalid_unique_transaction_code_special">Unique transaction code only support alphanumeric</string>
    <string name="my2c2pSDK_invalid_sdk">My2c2pSDK is invalid or null</string>
    <string name="my2c2pSDK_invalid_cookie">Session is invalid or null</string>
    <string name="my2c2pSDK_btn_cancel">Cancel</string>
    <string name="my2c2pSDK_btn_back">Back</string>
    <string name="my2c2pSDK_confirmation">Confirmation</string>
    <string name="my2c2pSDK_payment_details">Your payment details</string>
    <string name="my2c2pSDK_card_details">Please enter your details</string>
    <string name="my2c2pSDK_product_details">Product Details</string>
    <string name="my2c2pSDK_invoice_number">Invoice Number</string>
    <string name="my2c2pSDK_transaction_ID">Transaction ID</string>
    <string name="my2c2pSDK_amount">Amount</string>
    <string name="my2c2pSDK_total">Total</string>
    <string name="my2c2pSDK_transaction_fee">Service Fee</string>
    <string name="my2c2pSDK_credit_card_number">Credit card number</string>
    <string name="my2c2pSDK_change_card_number">Use other card</string>
    <string name="my2c2pSDK_expiry_date">Expiry date</string>
    <string name="my2c2pSDK_cvv2">CVV2</string>
    <string name="my2c2pSDK_card_holder_name">Cardholder name</string>
    <string name="my2c2pSDK_bank_country">Issuing bank country</string>
    <string name="my2c2pSDK_bank_name">Issuing bank name</string>
    <string name="my2c2pSDK_email">Cardholder\'s email</string>
    <string name="my2c2pSDK_store_card">Save my card details securely for future payment</string>
    <string name="my2c2pSDK_confirm">Continue Payment</string>
    <string name="my2c2pSDK_continue">Continue</string>
    <string name="my2c2pSDK_paybill">Pay your bill now</string>
    <string name="my2c2pSDK_image_desc">image</string>
    <string name="my2c2pSDK_paying">You are paying to</string>
    <string name="my2c2pSDK_contact">Contact number</string>
    <string name="my2c2pSDK_info">Info</string>
    <string name="my2c2pSDK_close">Close</string>
    <string name="my2c2pSDK_contact_email">Contact email : %1$s</string>
    <string name="my2c2pSDK_hint_cc">Your credit card number</string>
    <string name="my2c2pSDK_hint_your_name">Your name</string>
    <string name="my2c2pSDK_hint_expiry">MMYY</string>
    <string name="my2c2pSDK_hint_select_country">Select country</string>
    <string name="my2c2pSDK_hint_bank_name">Bank name</string>
    <string name="my2c2pSDK_hint_email">Email</string>
    <string name="my2c2pSDK_hint_email_optional">Email (Optional)</string>
    <string name="my2c2pSDK_payment_type_select">Please select payment type :</string>
    <string name="my2c2pSDK_payment_type_installment">Installment</string>
    <string name="my2c2pSDK_payment_type_cc">Credit Cards</string>
    <string name="my2c2pSDK_payment_type_counter">Counter</string>
    <string name="my2c2pSDK_payment_type_bank">Bank</string>
    <string name="my2c2pSDK_payment_type_payment">Payment</string>
    <string name="my2c2pSDK_payment_type_mpu">Pay with MPU</string>
    <string name="my2c2pSDK_payment_type_masterpass">Pay with Master Pass</string>
    <string name="my2c2pSDK_payment_type_alipay">Pay with Alipay</string>
    <string name="my2c2pSDK_payment_type_upop">Pay with UPOP</string>
    <string name="my2c2pSDK_payment_type_kiosk">Kiosk</string>
    <string name="my2c2pSDK_bank_bank">Bank</string>
    <string name="my2c2pSDK_bank_payment_method">Payment Method</string>
    <string name="my2c2pSDK_bank_username">Name</string>
    <string name="my2c2pSDK_bank_email">Email</string>
    <string name="my2c2pSDK_bank_no">Mobile Number</string>
    <string name="my2c2pSDK_bank_generate_slip">Generate Slip</string>
    <string name="my2c2pSDK_bank_empty_bank_agent">Please select bank agent.</string>
    <string name="my2c2pSDK_bank_empty_payment_method">Please select payment method.</string>
    <string name="my2c2pSDK_bank_hint_select_country">Select bank</string>
    <string name="my2c2pSDK_bank_hint_select_payment_method">Select payment method</string>
    <string name="my2c2pSDK_bank_username_empty">Name is required</string>
    <string name="my2c2pSDK_bank_email_empty">Email is required</string>
    <string name="my2c2pSDK_bank_email_invalid">Invalid email</string>
    <string name="my2c2pSDK_counter_channel_code_empty">Channel code is required</string>
    <string name="my2c2pSDK_counter_agent">Agent</string>
    <string name="my2c2pSDK_counter_username">Name</string>
    <string name="my2c2pSDK_counter_email">Email</string>
    <string name="my2c2pSDK_counter_no">Mobile Number</string>
    <string name="my2c2pSDK_counter_generate_slip">Generate Slip</string>
    <string name="my2c2pSDK_counter_empty_agent">Please select agent.</string>
    <string name="my2c2pSDK_counter_hint_agent">Select agent</string>
    <string name="my2c2pSDK_counter_username_empty">Name is required</string>
    <string name="my2c2pSDK_counter_email_empty">Email is required</string>
    <string name="my2c2pSDK_counter_email_invalid">Invalid email</string>
    <string name="my2c2pSDK_counter_agent_code_empty">Agent code is required</string>
    <string name="my2c2pSDK_installment_bank">Bank</string>
    <string name="my2c2pSDK_installment_installment_option">Installment Option</string>
    <string name="my2c2pSDK_installment_empty_bank_name">Please select bank.</string>
    <string name="my2c2pSDK_installment_installment_option_not_support">Card number is not allow for selected bank.</string>
    <string name="my2c2pSDK_installment_empty_option">Please select installment option.</string>
	<string name="my2c2pSDK_cvv_title">Card Verification Code</string>
	<string name="my2c2pSDK_cvv_content">
    <![CDATA[
			 The Card Verification Code, or CVC*, is an extra code printed on your debit or credit card. 
			 With American Express the CVC appears as a separate 4-digit code printed on the front of your card. 
			 With all other cards (Visa, Master Card, bank cards etc.) it is the final three digits of the number printed 
			 on the signature strip on the reverse of your card. As the CVC is not embossed (like the card number), 
			 the CVC is not printed on any receipts, hence it is not likely to be known by anyone other than the actual card owner.
			 \n\nWe ask you to fill out the CVC here to verify beyond any doubt that you actually hold the card you are using for this transaction,
			 and to avoid anyone other than you from shopping with your card number. All information you submit is transferred over secure SSL connections.
			 \n\n*The name of this code differs per card company. You may also know it as the Card Verification Value(CVV), the Card Security Code or the Personal Security Code. 
			 All names cover the same type of information.
  	]]></string>
</resources>